Added animation to tabs on main screen. Made tab's default color as white because of activate tab bug.

--- a/codenet.kv
+++ b/codenet.kv
@@ -67,10 +67,10 @@ WindowManager:
             MDTabs:
                 indicator_color: C('FFFFFF')
                 text_color_active: C('FFFFFF')
-                text_color_normal: C('000000')
+                text_color_normal: C('FFFFFF')
                 id: mainpanel
                 tab_hint_x: True
-                default_tab: 1
+                tab_indicator_anim: True
 
                 Tab:
                     title: f"[font=font/JetBrainsMono-Regular]Round 1[/font]"
