--- a/gui/playeramount.kv
+++ b/gui/playeramount.kv
@@ -9,6 +9,7 @@
 
     MDBoxLayout:
         orientation: "vertical"
+
         MDToolbar:
             title: "C0de.Net"
             left_action_items: [["menu", lambda x: x]]
@@ -40,45 +41,44 @@
 
         MDGridLayout:
             cols: 3
-            rows: 2
             padding: 5
             spacing: 5
             size_hint: 1, 0.5
 
             MDFillRoundFlatIconButtonToggle:
-                icon: "robot"
+                icon: "account-group"
                 group: "player"
                 id: butt1
-                font_style: "Button"
+                font_style: 'Button'
                 md_bg_color: app.theme_cls.primary_color
-                text: "4 Players"
+                text: "4 players"
 
             MDFillRoundFlatIconButtonToggle:
-                icon: "robot"
+                icon: "account-group"
                 group: "player"
                 id: butt2
-                font_style: "Button"
+                font_style: 'Button'
                 md_bg_color: app.theme_cls.primary_color
-                text: "5 Players"
+                text: "5 players"
 
             MDFillRoundFlatIconButtonToggle:
-                icon: "robot-off"
+                icon: "account-group"
                 group: "player"
                 id: butt3
-                font_style: "Button"
+                font_style: 'Button'
                 md_bg_color: app.theme_cls.primary_color
-                text: "6 Players"
+                text: "6 players"
 
             MDFillRoundFlatIconButtonToggle:
-                icon: "robot-off"
+                icon: "account-group"
                 group: "player"
                 id: butt4
-                font_style: "Button"
+                font_style: 'Button'
                 md_bg_color: app.theme_cls.primary_color
                 text: "7 Players"
 
             MDFillRoundFlatIconButtonToggle:
-                icon: "robot-off"
+                icon: "account-group"
                 group: "player"
                 id: butt5
                 font_style: "Button"
@@ -86,7 +86,7 @@
                 text: "8 Players"
 
             MDFillRoundFlatIconButtonToggle:
-                icon: "robot-off"
+                icon: "account-group"
                 group: "player"
                 id: butt6
                 font_style: "Button"
