--- a/gui/welcome.kv
+++ b/gui/welcome.kv
@@ -33,29 +33,9 @@
                 text_color: app.theme_cls.primary_color
                 theme_text_color: "Custom"
                 font_style: 'Subtitle2'
-                text: "[color=#FFFFFF]Welcome[/color] to a [color=#FFFFFF]social deduction[/color] card game that relies on an App for its basic [color=#FFFFFF]functionality[/color]. The App is still [color=#FFFFFF]under development[/color]; therefore, you may experience lack of [color=#FFFFFF]content[/color], incomplete [color=#FFFFFF]features[/color], and [color=#FFFFFF]bugs[/color]."
+                text: "[color=#FFFFFF]Welcome[/color] to a [color=#FFFFFF]social deduction[/color] card game that relies on an App to [color=#FFFFFF]function[/color] properly. This App is still [color=#FFFFFF]under development[/color]; therefore, you may experience lack of [color=#FFFFFF]content[/color], incomplete [color=#FFFFFF]features[/color], and [color=#FFFFFF]bugs[/color]."
                 halign: "center"
                 markup: True
-
-#            MDLabel:
-#                text_color: app.theme_cls.primary_color
-#                theme_text_color: "Custom"
-#                font_style: 'Subtitle2'
-#                text: "[color=#FFFFFF]Welcome[/color] to a [color=#FFFFFF]social deduction[/color] card game that relies on an App for its basic [color=#FFFFFF]functionality[/color]. The App is still [color=#FFFFFF]under development[/color]; therefore, you may experience lack of [color=#FFFFFF]content[/color], incomplete [color=#FFFFFF]features[/color], and [color=#FFFFFF]bugs[/color]."
-#                halign: "center"
-#                markup: True
-#                # Add this specifically to logs.
-#                #canvas.before:
-#                #    Color:
-#                #        rgba: 51/255, 255/255, 51/255, 0.3
-#                #    Line:
-#                #        width: 0.3
-#                #        rectangle: self.x, self.y, self.width, self.height
-#                #    Color:
-#                #        rgba: 51/255, 255/255, 51/255, 0.06
-#                #    Rectangle:
-#                #        pos: self.pos
-#                #        size: self.size
 
         MDBoxLayout:
             orientation: "vertical"
